--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@heroicons/vue": "^2.0.16",
 		"@nuxtjs/color-mode": "^3.2.0",
 		"@nuxtjs/i18n": "^8.0.0-beta.10",
+		"@tabler/icons-vue": "^2.7.0",
 		"autoprefixer": "^10.4.13",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.1.2",
